[MOOSE-157]: fix button style, link style, and add blockGap support for Columns.

--- a/wp-content/themes/core/assets/pcss/parts/footer.pcss
+++ b/wp-content/themes/core/assets/pcss/parts/footer.pcss
@@ -34,4 +34,13 @@
 			font-weight: var(--font-weight-normal);
 		}
 	}
+
+	.wp-block-social-link {
+		transition: var(--transition);
+
+		&:hover {
+			transform: none;
+			color: var(--themed-link-hover-text-color) !important;
+		}
+	}
 }
